--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "main": "index",
   "dependencies": {
+    "es6-promise": "^3.0.2",
     "htmlparser": "^1.7.7",
+    "jimp": "^0.2.7",
     "lodash": "^3.10.1",
     "parse5": "^1.5.0"
   }
